fixed padding on repo-top and alignment of navigation

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,6 +44,7 @@ body {
 .Header-nav {
   margin-top: 6px;
   flex: 3;
+  text-align: right;
 }
 
 .Header-banner {
