--- a/src/components/RepositoryFeed/RepositoryFeed.css
+++ b/src/components/RepositoryFeed/RepositoryFeed.css
@@ -50,7 +50,7 @@
   height: 75%;
   box-sizing: border-box;
   width: 100%;
-  padding-top: 10px;
+  padding: 10px;
 }
 
 .Repository-bottom {
